# shatterbird

./: Cargo.toml  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/.cargo/: config.toml
backend/mongo-model/: Cargo.toml
backend/mongo-model/mongo-model-derive/: Cargo.toml
backend/mongo-model/mongo-model-derive/src/: lib.rs  model.rs
backend/mongo-model/mongo-model-test/: Cargo.toml
backend/mongo-model/mongo-model-test/src/: lib.rs
backend/mongo-model/src/: filter.rs  id.rs  lib.rs
backend/shatterbird-cli/: Cargo.toml
backend/shatterbird-cli/src/: graph.rs  main.rs
backend/shatterbird-indexer/: Cargo.toml
backend/shatterbird-indexer/src/: exclusive.rs  main.rs
backend/shatterbird-indexer/src/git/: mod.rs
backend/shatterbird-indexer/src/lsif/: converter.rs  graph.rs  lsif_ext.rs  mod.rs
backend/shatterbird-server/: Cargo.toml
backend/shatterbird-server/src/: main.rs  settings.rs  utils.rs
backend/shatterbird-server/src/api/: hello.rs  mod.rs
backend/shatterbird-server/src/filesystem/: mod.rs  model.rs
backend/shatterbird-server/src/language_server/: error.rs  go_to_definition.rs  methods.rs  mod.rs  util.rs
backend/shatterbird-storage/: Cargo.toml
backend/shatterbird-storage/src/: lib.rs  ts.rs
backend/shatterbird-storage/src/model/: files.rs  history.rs  id.rs  lang.rs  mod.rs
backend/shatterbird-storage/src/serializers/: gix_hash.rs  mod.rs
backend/shatterbird-storage/src/util/: graph.rs
backend/shatterbird-utils/src/: cli.rs
backend/ts-bindings/: BlobFile.ts  Commit.ts  ContentKind.ts  EitherNode.ts  ExpandedFileContent.ts  FileContent.ts  FullNode.ts  GitObjectId.ts  Id.ts  Line.ts  Node.ts  NodeInfo.ts  Range.ts
docs/manual/: manual.tex  settings.tex
docs/manual/content/: 01_purpose.tex  02_conditions.tex  03_usage.tex
docs/manual/titul/: approval.tex  main.tex  titul.tex
docs/presentation/: bibliography.bib  prelude.tex  presentation.tex  readme.txt
docs/presentation/HSE-theme/: beamerthemeHSE.sty
docs/sources/: bibliography.bib  changes.tex  preamble.tex  settings.tex  sources.tex
docs/sources/titul/: approval.tex  titul.tex
docs/testing/: bibliography.bib  preamble.tex  settings.tex  testing.tex
docs/testing/content/: 00_annotation.tex  01_object.tex  02_goals.tex  03_requirements.tex  04_docs.tex  05_conditions.tex  06_methods.tex
docs/testing/titul/: approval.tex  main.tex  titul.tex
docs/thesis/: .latexmkrc  bibliography.bib  diploma.tex  glossary.tex  preamble.tex  settings.tex
docs/thesis/content/: 00_abstract.tex  01_glossary.tex  02_introduction.tex  03_overview.tex  04_solution.tex  05_architecture.tex  06_final.tex  09_bibliography.tex  10_models.tex  11_repo.tex
docs/thesis/titul/: main.tex  titul.tex
docs/tz/: preamble.tex  tz.tex
docs/tz/content/: 00_annotation.tex  01_introduction.tex  02_reasons.tex  03_goals.tex  04_requirements.tex  05_docs.tex  06_economy.tex  07_stages.tex  08_checklist.tex  09_bibliography.tex  10_glossary.tex
docs/tz/titul/: approval.tex  titul.tex
examples/: README.md  frontend.lsif.json
frontend/: Caddyfile  Dockerfile  README.md  dev.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/public/: index.html  product.json
frontend/src/: exampleFiles.ts  extension.ts  manifest.json  memfs.ts  server-types
frontend/src/filesystem/: fsClient.ts  fsProvider.ts  fsProviderBase.ts  fsRoot.ts  node.ts  repoRoot.ts  types.ts
frontend/src/language/: languageClient.ts
frontend/src/server-types/: BlobFile.ts  Commit.ts  Edge.ts  ExpandedFileContent.ts  FileContent.ts  FullNode.ts  Line.ts  Node.ts  NodeInfo.ts  Range.ts  Vertex.ts
lsp-types/: Cargo.toml
lsp-types/src/: lsif.rs
lsp-types/tests/: lsif.rs
shatterbird-indexer/: Cargo.toml
shatterbird-indexer/src/: converter.rs  graph.rs  main.rs
shatterbird-indexer/src/lsif/: converter.rs  mod.rs
shatterbird-server/: Cargo.toml
shatterbird-server/src/: main.rs  state.rs
shatterbird-storage/: Cargo.toml
shatterbird-storage/src/: lib.rs
shatterbird-storage/src/model/: id.rs  lang.rs  mod.rs
shatterbird-utils/: Cargo.toml
shatterbrid-indexer/: Cargo.toml
(+3 files in other folders)
