[package]
name = "shatterbird-storage"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
derive-where = "1.2.7"
eyre = "0.6.12"
lsp-types = { path = "../lsp-types" }
mongodb = { version = "2.8.2", features = ["tracing-unstable"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tracing = "0.1.40"
