[package]
name = "shatterbird-utils"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argfile = "0.1.6"
axum = "0.7.5"
clap = { version = "4.5.4", features = ["env", "derive"] }
eyre = "0.6.12"
tracing = "0.1.40"
