[package]
name = "shatterbird-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
bson = "2.10.0"
bumpalo = "3.16.0"
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
either = "1.11.0"
eyre = "0.6.12"
futures = "0.3.30"
gix = "0.62.0"
lsp-types = { path = "../thirdparty/lsp-types" }
multimap = "0.10.0"
rayon = "1.10.0"
scc = "2.1.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
shatterbird-storage = { path = "../shatterbird-storage" }
tokio = { version = "1.37.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["release_max_level_info", "max_level_debug"] }
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
radix_trie = "0.2"
