[package]
name = "shatterbird-server"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
cfg-if = "1.0.0"
clap = "4.5.4"
color-eyre = "0.6.3"
eyre = "0.6.12"
futures = "0.3.30"
gix-hash = "0.14.2"
log = "0.4.21"
lsp-types = "0.95.1"
mongodb = "2.8.2"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = "8.1"

shatterbird-storage = { path = "../shatterbird-storage" }
shatterbird-utils = { path = "../shatterbird-utils" }
serde_json = "1.0.115"
