[package]
name = "shatterbird-storage"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
derive-where = "1.2.7"
either = "1.11.0"
eyre = "0.6.12"
futures = "0.3.30"
gix-hash = { version = "0.14.2", features = ["serde"] }
lsp-types = { path = "../../thirdparty/lsp-types" }
mongodb = { version = "2.8.2", features = ["tracing-unstable"] }
strum = { version = "0.26.2", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tracing = "0.1.40"
ts-rs = { version = "8.1", features = ["bson-uuid-impl"] }

mongo-model = { path = "../mongo-model" }
